--- a/EgenHemsidaPerAnders.html
+++ b/EgenHemsidaPerAnders.html
@@ -13,7 +13,13 @@
         <p>By Anton Persson.</p>
           
     </div>
-
+    <div class ="Divider">
+      <hr>
+      <a  href="About.html">About me</a>
+      <a  href="About.html">About this website</a>
+      <a  href="About.html">My Projects</a>
+      <a  href="About.html">Contact</a>
+    </div>
 
 </body>
 </html>
