--- a/EgenHemsidaPerAnders.html
+++ b/EgenHemsidaPerAnders.html
@@ -19,6 +19,33 @@
       <a  href="About.html">About this website</a>
       <a  href="About.html">My Projects</a>
       <a  href="About.html">Contact</a>
+        <hr>
+    </div>
+    <div class="button-center">
+    <button class="button-1">
+        <a href="EgenHemsidaPerAnders.html">
+            <div>
+             <img src="Images/MatchMakingImage.png" alt="Match making tutorial" width="300" height="200">
+             <p>Global match making</p>
+            </div>
+        </a>
+    </button>
+    <button class="button-2">
+        <a href="EgenHemsidaPerAnders.html">
+            <div>
+                <img src="Images/MapVotingIcon.png" alt="Map Voting" width="300" height="200">
+                <p>Map voting</p>
+            </div>
+        </a>
+    </button>
+    <button class="button-3">
+        <a href="EgenHemsidaPerAnders.html">
+            <div>
+                <img src="Images/ScrolingBackground.png" alt="Match making tutorial" width="300" height="200">
+                <p >My own website</p>
+            </div>
+        </a>
+    </button>
     </div>
 
 </body>
