Button javascript animation handeling

--- a/EgenHemsidaPerAnders.html
+++ b/EgenHemsidaPerAnders.html
@@ -9,7 +9,6 @@
 <body>
     <div class="hero">
         <h1>ADVANCED ROBLOX LUA TUTORIALS</h1>
-        <br> </br>
         <p>By Anton Persson.</p>
           
     </div>
@@ -19,7 +18,6 @@
       <a  href="About.html">About this website</a>
       <a  href="About.html">My Projects</a>
       <a  href="About.html">Contact</a>
-        <hr>
     </div>
     <div class="button-center">
     <button class="button-1">
@@ -47,6 +45,7 @@
         </a>
     </button>
     </div>
+    <script src="javascript.js"></script>
 
 </body>
 </html>
