--- a/EgenHemsidaPerAnders.html
+++ b/EgenHemsidaPerAnders.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <meta>
-<link rel="stylesheet" href="EgenHemsidaCSS.css">
-<style>
-
-
-</style>
+<lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Advanced roblox tutorials</title>
+    <link rel="stylesheet" href="EgenHemsidaCSS.css">
 <html>
 <body>
     <div class="hero">
