--- a/About.html
+++ b/About.html
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
-<meta>
-<lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced roblox tutorials</title>
-    <link rel="stylesheet" href="EgenHemsidaCSS.css">
-<html>
+    <link rel="stylesheet" href="Scrollingtext.css">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            color: #000000;
+            padding: 50px;
+            min-height: 200vh;
+            background-color: #000000;
+        }
+</style>
+</head>
 <body>
-    <div class = "fade-in-section">
-        <div class="button-center">
-         <h1>About me</h1>
-         <p>My name is Anton Persson and I am a 18 year old sutdent from sweden.</p>
-        </div>
-
-
     </div>
+    <div class ="Divider">
+      <hr>
+      <a href="About.html">About me</a>
+      <a href="About.html">About this website</a>
+      <a href="About.html">My Projects</a>
+      <a href="About.html">Contact</a>
+    </div>
+    <div class="scrolling-text-bg">
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+        <div class="scrolling-text-row"><div class="scrolling-text-content"><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span><span>ABOUT ME ABOUT ME ABOUT ME ABOUT ME ABOUT ME </span></div></div>
+    </div>
+    <div class="content-overlay fade-in-section">
+           <p>Hello! My name is Anton and im a 18 year old student from Sweden</p>
+           <p>I've been intrested in making video games since i was little</p>
+           <p>Starting at a very young age in scratch and then moving into Unity and Godot. Now days im mostly working in Roblox</p>
 
-</p>
+              
+    </div>
+    <script src="javascript.js"></script>
 </body>
-
-
-
-<script src="javascript.js"></script>
+</html>
