--- a/EgenHemsidaPerAnders.html
+++ b/EgenHemsidaPerAnders.html
@@ -14,10 +14,10 @@
         <p>By Anton Persson.</p>
           
     </div>
-    <div class ="Divider">
+    <div class ="Divider"> 
       <hr>
       <a  href="About.html">About me</a>
-      <a  href="About.html">About this website</a>
+      <a  href="AboutThisWebsite.html">About this website</a>
       <a  href="About.html">My Projects</a>
       <a  href="About.html">Contact</a>
     </div>
