W.I.P MY PROJECTS page

--- a/About.html
+++ b/About.html
@@ -18,7 +18,7 @@ AboutThisWebsite.html
       <hr>
       <a href="EgenHemsidaPerAnders.html">Home</a>
       <a href="AboutThisWebsite.html">About this website</a>
-      <a href="About.html">My Projects</a>
+      <a href="MyProejcts.html">My Projects</a>
       <a href="About.html">Contact</a>
     </div>
     <!--
