--- a/AboutThisWebsite.html
+++ b/AboutThisWebsite.html
@@ -18,7 +18,7 @@ About.html
       <hr>
       <a href="EgenHemsidaPerAnders.html">Home</a>
       <a href="About.html">About me</a>
-      <a href="About.html">My Projects</a>
+      <a href="MyProejcts.html">My Projects</a>
       <a href="About.html">Contact</a>
     </div>
     <!--
@@ -53,6 +53,9 @@ About.html
            <p>This website is created solely for the purpose of sharing tutorials that I wish I had or that people in my community have asked me to create.</p>
            <p>Secondly this website is part of my last term exam in web design at Polhem Skolan Gävle 2025.</p>
            <p>I've always feelt like Roblox laked a good text based tutorial website for more advanced stuff. So i hope this will help atleast a couple of peapole.</p>
+           <p>--------------------------------------------------------------------------------------------------------</p>
+           <p>This website was also created by me to demonstrate my skills and experience to future employers, which is why there is a 'MY PROJECTS' page.</p>
+
     </div>
     <!-- for scrolling in / loading in fade in animations-->
     <script src="javascript.js"></script>
