small fix (linked my project with the main page)

--- a/EgenHemsidaPerAnders.html
+++ b/EgenHemsidaPerAnders.html
@@ -18,7 +18,7 @@
       <hr>
       <a  href="About.html">About me</a>
       <a  href="AboutThisWebsite.html">About this website</a>
-      <a  href="About.html">My Projects</a>
+      <a  href="MyProejcts.html">My Projects</a>
       <a  href="About.html">Contact</a>
     </div>
     <div class="button-center">
