Global matchmaking tutorial W.I.P and MY PROJECTS finished

--- a/AboutThisWebsite.html
+++ b/AboutThisWebsite.html
@@ -1,5 +1,5 @@
 <!--
-About.html
+AboutThisWebsite.html
 - This page displays an animated scrolling text background and an overlay with personal info.
 -->
 <!DOCTYPE html>
@@ -53,10 +53,13 @@ About.html
            <p>This website is created solely for the purpose of sharing tutorials that I wish I had or that people in my community have asked me to create.</p>
            <p>Secondly this website is part of my last term exam in web design at Polhem Skolan Gävle 2025.</p>
            <p>I've always feelt like Roblox laked a good text based tutorial website for more advanced stuff. So i hope this will help atleast a couple of peapole.</p>
-           <p>--------------------------------------------------------------------------------------------------------</p>
-           <p>This website was also created by me to demonstrate my skills and experience to future employers, which is why there is a 'MY PROJECTS' page.</p>
-
     </div>
+    <div class="content-overlay fade-in-section">
+      <p>This website was also created by me to demonstrate my skills and experience to future employers, which is why there is a 'MY PROJECTS' page.</p>
+      <p>This website was made with HTML and CSS in Visual Studio Code 2025</p>
+    </div>
+
+            
     <!-- for scrolling in / loading in fade in animations-->
     <script src="javascript.js"></script>
 </body>
