--- a/EgenHemsidaPerAnders.html
+++ b/EgenHemsidaPerAnders.html
@@ -23,9 +23,9 @@
     </div>
     <div class="button-center">
     <button class="button-1">
-        <a href="EgenHemsidaPerAnders.html">
+        <a href="GlobalMatchMaking.html">
             <div>
-             <img src="Images/MatchMakingImage.png" alt="Match making tutorial" width="300" height="200">
+             <img src="Images/MatchMakingImage.png" alt="Match making tutorial " width="300" height="200">
              <p>Global match making</p>
             </div>
         </a>
@@ -33,16 +33,16 @@
     <button class="button-2">
         <a href="EgenHemsidaPerAnders.html">
             <div>
-                <img src="Images/MapVotingIcon.png" alt="Map Voting" width="300" height="200">
-                <p>Map voting</p>
+                <img src="Images/MapVotingIcon.png" alt="Map Voting (Comming soon)" width="300" height="200">
+                <p>Map voting (Comming soon)</p>
             </div>
         </a>
     </button>
     <button class="button-3">
         <a href="EgenHemsidaPerAnders.html">
             <div>
-                <img src="Images/ScrolingBackground.png" alt="Match making tutorial" width="300" height="200">
-                <p >My own website</p>
+                <img src="Images/ScrolingBackground.png" alt="Advanced Roblox Movement(Comming soon)" width="300" height="200">
+                <p >Advanced Movement tutorial (Comming soon)</p>
             </div>
         </a>
     </button>
