--- a/MyProejcts.html
+++ b/MyProejcts.html
@@ -18,7 +18,7 @@ About.html
       <hr>
       <a href="EgenHemsidaPerAnders.html">Home</a>
       <a href="About.html">About me</a>
-      <a href="About.html">My Projects</a>
+      <a href="AboutThisWebsite.html">About this website</a>
       <a href="About.html">Contact</a>
     </div>
     <!--
@@ -27,7 +27,6 @@ About.html
     - ugly way of doing it but i dont know how to do it better in html
     -->
     <div class="scrolling-text-bg">
-        <!-- Repeat as many rows as needed for the background density -->
         <div class="scrolling-text-row"><div class="scrolling-text-content"><span>MY PROJECTS MY PROJECTS MY PROJECTS MY PROJECTS </span><span>MY PROJECTS MY PROJECTS MY PROJECTS MY PROJECTS </span></div></div>
         <div class="scrolling-text-row"><div class="scrolling-text-content"><span>MY PROJECTS MY PROJECTS MY PROJECTS MY PROJECTS </span><span>MY PROJECTS MY PROJECTS MY PROJECTS MY PROJECTS </span></div></div>
         <div class="scrolling-text-row"><div class="scrolling-text-content"><span>MY PROJECTS MY PROJECTS MY PROJECTS MY PROJECTS </span><span>MY PROJECTS MY PROJECTS MY PROJECTS MY PROJECTS </span></div></div>
@@ -70,7 +69,7 @@ About.html
         <h1>IODINE - 131 [Roblox: LUAU](2024)</h1>
         <button class="Img-Button">
         <a href="https://www.roblox.com/games/17464436608/IODINE-131">
-             <img src="Images/IODINEIcone.png" alt="Match making tutorial" width="200" height="200">
+             <img src="Images/IODINEIcone.png" alt="iodine" width="200" height="200">
         </a>
         </button>
         <p>IODINE is my first roblox project made in about 3 months time. It's main pourpse was for me to teatch myself Roblox development</p>
@@ -85,7 +84,7 @@ About.html
      <h1>G.R.E.G [GODOT: GDScript](2023)</h1>
      <button class="Img-Button">
         <a href="https://hansmelange.itch.io/greg">
-             <img src="Images/GREGIcon.png" alt="Match making tutorial" width="200" height="200">
+             <img src="Images/GREGIcon.png" alt="GREG" width="200" height="200">
         </a>
      </button>
      </div>
@@ -98,7 +97,7 @@ About.html
      <h1>Small Samurai [UNITY: C#](2022)</h1>
      <button class="Img-Button">
         <a href="https://inter-dream-games.itch.io/small-samurai">
-             <img src="Images/SmallSamuraiIcon.jpg" alt="Match making tutorial" width="200" height="200">
+             <img src="Images/SmallSamuraiIcon.jpg" alt="small-samurai" width="200" height="200">
         </a>
      </button>
      </div>
@@ -106,6 +105,34 @@ About.html
      <P>This was the last game i ever made in Unity. It was made in about 2 weeks time as a small compition between me and my freind</P>
      <p>It's was also my first time making 2D art myself. </p>
      
+
+</div>
+     <div class="content-overlay fade-in-section">
+     <div>
+     <h1>Child of war [UNITY: C#](2022)</h1>
+     <button class="Img-Button">
+        <a href="https://inter-dream-games.itch.io/child-of-war">
+             <img src="Images/ChildOfWarIcon.png" alt="Child of war" width="200" height="200">
+        </a>
+     </button>
+     </div>
+     <p>Child of war is a small (not so great) game that i coded with my freind during the span of 2 months. We also got help with all the character art from another freind</p>
+     <P>Child of war is a 2D side scrolling platformer that's supposed to depict the horrors of war from the perspective of a child.</P>
+     <p>This game was made for a school talent contest but we overscoped it quite a bit so we barely play tested it and had to cut out a lot of content. But it was a great learning experince</p>
+     <script src="javascript.js"></script>
+
+          </div>
+     <div class="content-overlay fade-in-section">
+     <div>
+     <h1>Potato of truth [UNITY: C#](2021)</h1>
+     <button class="Img-Button">
+        <a href="https://inter-dream-games.itch.io/potato-of-truth">
+             <img src="Images/PotatoOfTruth.png" alt="Potato of truth" width="200" height="200">
+        </a>
+     </button>
+     </div>
+     <p>Potato of truth was one of the first game i ever made. Its a 3D frist persson stroy game made for a game jam during the span of a weekend with a freind</p>
+     <P>It's a really really bad game but it was a really really good learning experince but unforunatle we overscoped a lot of games after this beacuse of how much we tought we made in such a sort time. this would end up shooting us in the foot for quite a while. Not finsihing any games for quite a while.</P>
      <script src="javascript.js"></script>
  
 </body>
